--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,9 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
+# Enable this if you are using MAMP on MacOs
+#DB_SOCKET=/Applications/MAMP/tmp/mysql/mysql.sock
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
