--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     },
     "dependencies": {
         "he": "^1.2.0",
-        "react-markdown": "^9.0.1",
-        "rehype-highlight": "^7.0.0"
+        "react-markdown": "^9.0.1"
     }
 }
